# neoloki-lib

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: coverage.yml  lnx.yml  win.yml
include/loki/: null_type.hpp  singleton.hpp  small_object.hpp  threads.hpp  type_list.hpp  type_manip.hpp  type_traits.hpp
src/: singleton.cpp  small_object.cpp
tests/: CMakeLists.txt  main.cpp  singleton_tests.hpp  small_object_tests.hpp  type_list_tests.hpp  type_manip_tests.hpp  type_traits_tests.hpp  unit_test.hpp
